--- a/index.html
+++ b/index.html
@@ -41,49 +41,49 @@
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
                     </div>
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
@@ -95,7 +95,7 @@
                 <h2>Fun of Cricket</h2>
                 <div class="cart-item">
                     <div class="item">
-                        <img src="ff.png">
+                        <img src="./ff.png">
                         <p>Cricket Bat</p>
                         <p>50% discount</p>
                         <p>Buy Now</p>
